--- a/build.sh.config
+++ b/build.sh.config
@@ -11,7 +11,8 @@ DOINDEX=0;             # 0 = no index, 1 = create index
 DOBIBTEX=1;            # 0 = no bibliography, 1 = create bibliography
 LANG="en";             # e.g. en, de, ...
 LANGEXT="en_US.UTF-8"  # e.g. en_US.UTF-8, de_DE.UTF-8
-DIR_TMP="/tmp/willner/template";
+FILE_BASE="template";
+DIR_TMP="/tmp/${FILE_BASE}/";
 DIR_SRC="src";
 DIR_RES="resources";
 DIR_IMG="$DIR_RES/images";
@@ -23,8 +24,8 @@ REQ_DIRS="$DIR_TMP $DIR_DEST $DIR_SRC $DIR_RES $DIR_TMP $DIR_IMG";
 REQ_APPLICATIONS="pdflatex aspell perl epstopdf gnuplot Rscript pdfopt";
 FILE_ABSTRACT="$DIR_SRC/abstract.tex";
 FILE_INTRO="$DIR_SRC/introduction.tex";
-FILE_CONFIG="template.config.tex";
-FILE_MAIN="template.tex";
-FILE_BIB="template.bib";
-FILE_ACRO="template.acro.tex";
+FILE_CONFIG="${FILE_BASE}.config.tex";
+FILE_MAIN="${FILE_BASE}.tex";
+FILE_BIB="${FILE_BASE}.bib";
+FILE_ACRO="${FILE_BASE}.acro.tex";
 
