--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ install:
   - sudo apt-get install ttf-sil-gentium ttf-sil-gentium-basic
   - sudo apt-get install texlive-fonts-extra ttf-inconsolata ttf-droid
   - sudo apt-get install texlive-xetex texlive-latex-recommended texlive-latex-extra
+  - sudo apt-get install aspell gnuplot r-base
 
 script:
   - make build
