--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,10 @@ install:
   - sudo apt-get install texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-humanities
   - sudo apt-get install aspell gnuplot r-base graphviz
   - wget http://yar.fruct.org/attachments/download/362/plantuml_7707-1_all.deb
-  - sudo dpkg -i plantuml_7707-1_all.deb 
+  - sudo dpkg -i plantuml_7707-1_all.deb
 
 script:
-  - make generate
-  - pdflatex template
-  - bibtex template
-  - pdflatex template
-  - make build
-  - cat build.sh.log
+  - make build || cat build.sh.log
 
 notifications:
   - email: alex@willner.ws
