--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - sudo dpkg -i plantuml_7707-1_all.deb
 
 script:
-  - (make build || cat build.sh.log)
+  - make build
+  - cat build.sh.log
 
 notifications:
   - email: alex@willner.ws
