--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 install:
   - sudo apt-get install ttf-sil-gentium ttf-sil-gentium-basic
-  - sudo apt-get install texlive-fonts-extra ttf-inconsolata ttf-droid
+  - sudo apt-get install texlive-fonts-extra ttf-inconsolata ttf-droid cm-super
   - sudo apt-get install texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-humanities texlive-science
   - sudo apt-get install aspell gnuplot r-base graphviz
   - wget http://yar.fruct.org/attachments/download/362/plantuml_7707-1_all.deb
