--- a/build.sh.config
+++ b/build.sh.config
@@ -9,6 +9,7 @@
 DEBUG=0;               # 0 = output to log, 1 = show output
 DOINDEX=0;             # 0 = no index, 1 = create index
 DOBIBTEX=1;            # 0 = no bibliography, 1 = create bibliography
+BIN_BIB="biber -q";    # OR bibtex
 LANG="en";             # e.g. en, de, ...
 LANGEXT="en_US.UTF-8"  # e.g. en_US.UTF-8, de_DE.UTF-8
 FILE_BASE="template";
