--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ install:
   - sudo apt-get update
   - sudo apt-get install ttf-sil-gentium ttf-sil-gentium-basic
   - sudo apt-get install texlive-fonts-extra ttf-inconsolata ttf-droid cm-super
-  - sudo apt-get install texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-humanities texlive-science #biber
+  - sudo apt-get install texlive-xetex texlive-latex-recommended texlive-latex-extra texlive-humanities texlive-science biblatex #biber
   - sudo apt-get install aspell gnuplot r-base graphviz
   - wget http://yar.fruct.org/attachments/download/362/plantuml_7707-1_all.deb
   - sudo dpkg -i plantuml_7707-1_all.deb
