copy auto generated files on demand

--- a/build.sh.config
+++ b/build.sh.config
@@ -29,4 +29,5 @@ FILE_CONFIG="${FILE_BASE}.config.tex";
 FILE_MAIN="${FILE_BASE}.tex";
 FILE_BIB="${FILE_BASE}.bib";
 FILE_ACRO="${FILE_BASE}.acro.tex";
-
+FILE_GEN_BIB="";
+FILE_GEN_ACRO="";
