--- a/build.sh.config
+++ b/build.sh.config
@@ -24,8 +24,8 @@ DIR_SCR="$DIR_RES/scripts";
 DIR_BLD="lib/$DIR_RES/build";
 REQ_DIRS="$DIR_TMP $DIR_DEST $DIR_SRC $DIR_RES $DIR_TMP $DIR_IMG";
 REQ_APPLICATIONS="pdflatex aspell perl epstopdf gnuplot Rscript pdfopt plantuml";
-FILE_ABSTRACT="$DIR_SRC/abstract.tex";
-FILE_INTRO="$DIR_SRC/introduction.tex";
+FILE_ABSTRACT="$DIR_SRC/00_abstract.tex";
+FILE_INTRO="$DIR_SRC/01_introduction.tex";
 FILE_CONFIG="${FILE_BASE}.config.tex";
 FILE_MAIN="${FILE_BASE}.tex";
 FILE_BIB="${FILE_BASE}.bib";
