--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: true
 dist: trusty
 addons:
   apt:
@@ -20,9 +20,9 @@ addons:
       - gnuplot
       - r-base
       - graphviz
-#install:
-#  - wget http://yar.fruct.org/attachments/download/362/plantuml_7707-1_all.deb
-#  - sudo dpkg -i plantuml_7707-1_all.deb
+install:
+  - wget http://yar.fruct.org/attachments/download/362/plantuml_7707-1_all.deb
+  - sudo dpkg -i plantuml_7707-1_all.deb
 #  - curl -L "http://downloads.sourceforge.net/project/biblatex-biber/biblatex-biber/0.9.9/binaries/Linux/biber-linux_x86_64.tar.gz?r=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fbiblatex-biber%2Ffiles%2Fbiblatex-biber%2F0.9.9%2Fbinaries%2FLinux%2F&ts=1422482813&use_mirror=softlayer-ams"|tar xzf -
 #  - export PATH=$PATH:.
 
