--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,30 @@
 sudo: true
 dist: focal
-addons:
-  apt:
-    sources:
-      - ppa:texlive-backports/ppa
-    packages:
-      - texlive-fonts-recommended
-      - texlive-fonts-extra
-      - texlive-xetex
-      - texlive-full
-      - texlive-latex-recommended
-      - texlive-latex-extra
-      - texlive-humanities
-      - texlive-science
-      - texlive-pictures
-      - aspell
-      - gnuplot
-      - r-base
-      - graphviz
-      - fonts-sil-gentium
-      - fonts-inconsolata
-      - fonts-sil-gentium-basic
+# addons:
+#   apt:
+#     # sources:
+#     #   - ppa:texlive-backports/ppa
+#     # packages:
+#     #   - texlive-fonts-recommended
+#     #   - texlive-fonts-extra
+#     #   - texlive-xetex
+#     #   - texlive-full
+#     #   - texlive-latex-recommended
+#     #   - texlive-latex-extra
+#     #   - texlive-humanities
+#     #   - texlive-science
+#     #   - texlive-pictures
+#     #   - aspell
+#     #   - gnuplot
+#     #   - r-base
+#     #   - graphviz
+#     #   - fonts-sil-gentium
+#     #   - fonts-inconsolata
+#     #   - fonts-sil-gentium-basic
 install:
-  - sudo apt -y install fonts-sil-gentium fonts-inconsolata fonts-sil-gentium-basic cm-super biber texlive-lang-german texlive-full plantuml
+  - sudo apt -y install biber xindy texlive-base texlive-extra-utils texlive-latex-extra texlive-science
+  - sudo apt -y install make aspell graphviz gnuplot r-base plantuml
+  #- sudo apt -y install fonts-sil-gentium fonts-inconsolata fonts-sil-gentium-basic cm-super biber texlive-lang-german texlive-full plantuml
   #- wget --no-check-certificate http://yar.fruct.org/attachments/download/362/plantuml_7707-1_all.deb
   #- sudo dpkg -i plantuml_7707-1_all.deb
   #- curl -L "http://downloads.sourceforge.net/project/biblatex-biber/biblatex-biber/0.9.9/binaries/Linux/biber-linux_x86_64.tar.gz?r=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fbiblatex-biber%2Ffiles%2Fbiblatex-biber%2F0.9.9%2Fbinaries%2FLinux%2F&ts=1422482813&use_mirror=softlayer-ams"|tar xzf -
