--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ dist: focal
 #     #   - fonts-sil-gentium-basic
 install:
   - sudo apt update
-  - sudo apt -y install biber xindy texlive-base texlive-extra-utils texlive-latex-extra texlive-science texlive-publishers
+  - sudo apt -y install biber xindy texlive-base texlive-latex-base texlive-extra-utils texlive-latex-extra texlive-science texlive-publishers
   - sudo apt -y install make aspell graphviz gnuplot r-base plantuml
   #- sudo apt -y install fonts-sil-gentium fonts-inconsolata fonts-sil-gentium-basic cm-super biber texlive-lang-german texlive-full plantuml
   #- wget --no-check-certificate http://yar.fruct.org/attachments/download/362/plantuml_7707-1_all.deb
@@ -34,6 +34,7 @@ install:
 script:
   - make clean
   - make update
+  - make debug
   - make quick
   - make bib
   - make all
