--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,16 +4,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container: ubuntu:rolling
+    shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup
         run: |
+          ls -l
+          apt update && apt install sudo
           sudo apt update
           sudo apt -y install make git
       - name: Init
         run: |
-          git clone 
           make update
           make deps-lin
       - name: Debug
