--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
 name: LaTeX Paper Github Action
 on: [push, pull_request]
+defaults:
+  run:
+    shell: bash
 jobs:
   test:
     runs-on: ubuntu-latest
     container: ubuntu:rolling
-    shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v2
