--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
           sudo apt -y install make git
       - name: Init
         run: |
+          make
           make update
           make deps-lin
       - name: Debug
