--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,17 +10,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          submodules: recursive
       - name: Setup
         run: |
           ls -la
           ls -la lib
-          apt update && apt install sudo
+          apt update && apt install sudo git
           sudo apt update
           sudo apt -y install make git
       - name: Init
         run: |
+          git submodule update --init --recursive
           make update
           make deps-lin
       - name: Debug
