--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           ls -la
           ls -la lib
-          apt update && apt install sudo git
+          apt update && apt install -y sudo git
           sudo apt update
           sudo apt -y install make git
       - name: Init
