--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,7 @@ jobs:
           sudo apt -y install make git
       - name: Init
         run: |
-          git submodule update --init --recursive
-          make update
+          git clone https://github.com/tubav/Core.git lib
           make deps-lin
       - name: Debug
         run: |
