--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,14 +1,11 @@
 name: macOS
-on:
-  push:
-    branches-ignore:
-      - '**'
+on: push
 defaults:
   run:
     shell: bash
 jobs:
   test:
-    runs-on: macos-11.0
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
