--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -17,8 +17,10 @@ jobs:
         run: |
           git clone https://github.com/tubav/Core.git lib
           make deps-mac
+          eval "$(/usr/libexec/path_helper)"
       - name: Debug
         run: |
+          eval "$(/usr/libexec/path_helper)"
           make debug
       - name: Test
         run: |
