--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -19,6 +19,7 @@ jobs:
           brew install mactex plantuml graphviz gnuplot aspell r
           eval "$(/usr/libexec/path_helper)"
           sudo tlmgr update --self
+          sudo tlmgr update --all
           sudo tlmgr install texliveonfly biber collection-fontsrecommended IEEEtran xindy
       - name: Debug
         run: |
