--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -18,7 +18,8 @@ jobs:
           git clone https://github.com/tubav/Core.git lib
           brew install mactex plantuml graphviz gnuplot aspell r
           eval "$(/usr/libexec/path_helper)"
-          sudo tlmgr update --self --all
+          sudo tlmgr update --self
+          sudo tlmgr update --all
           sudo tlmgr install texliveonfly glossaries biber collection-fontsrecommended IEEEtran xindy
       - name: Debug
         run: |
